# microdns

./: LICENSE  README.md  cabal.project  microdns.cabal
app/: Main.hs
src/: MicroDNS.hs
src/MicroDNS/: DAI.hs  DynamicRegistration.hs  Handler.hs  MicroZone.hs  Runtime.hs  Server.hs
