cabal-version:      2.4
name:               microdns
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: a minimalistic DNS-authoritative server

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable microdns
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: MicroDNS
                 , MicroDNS.DynamicRegistration
                 , MicroDNS.DAI
                 , MicroDNS.Handler
                 , MicroDNS.Runtime
                 , MicroDNS.Server
                 , MicroDNS.MicroZone

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , aeson
                    , async
                    , bytestring
                    , base16-bytestring
                    , case-insensitive
                    , cryptohash-sha256
                    , ip
                    , iproute
                    , streaming-commons
                    , bytestring
                    , text
                    , prometheus-client
                    , dns >= 4.1.1
                    , network
                    , megaparsec
                    , optparse-generic
                    , prodapi
                    , warp
                    , warp-tls
                    , wai-extra
                    , servant
                    , servant-server
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010
